--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -1,20 +1,224 @@
 ---
 layout: page
-title: "album"
-description: "masonry"
+title: "Gallery"
+description: "Konrad Jaworski"
 active: gallery
-header-img: "img/gallery-bg.jpg"
+header-img: "/gallery/albums/alb01.jpg"
 album-title: "my 1st album"
 images:
- - image_path: /gallery/archive/g01/bg1.jpg
+ - image_path: /gallery/albums/bg001.jpg
    caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g01/bg2.jpg
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg002.jpg
    caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g01/bg3.jpg
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg003.jpg
    caption: IMAGE TITLE
-   copyright: © photorama
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg004.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg005.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg006.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg007.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg008.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg009.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg010.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg011.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg012.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg013.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg014.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg015.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg016.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg017.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg018.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg019.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg020.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg021.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg022.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg023.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg024.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg025.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg026.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg027.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg028.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg029.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg030.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg031.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg032.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg033.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg034.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg035.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg036.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg037.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg038.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg039.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg040.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg041.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg042.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg043.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg044.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg045.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg046.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg047.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg048.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg049.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg050.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg051.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg052.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg053.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg054.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg055.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg056.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg057.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg058.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg059.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg060.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg061.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg062.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg063.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg064.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg065.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg066.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg067.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg068.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg069.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg070.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
+ - image_path: /gallery/albums/bg071.jpg
+   caption: IMAGE TITLE
+   copyright: © Konrad Jaworski
 ---
 
 <html class="no-js" lang="en">
