Fix image paths for gallery1.

--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -6,217 +6,217 @@ active: gallery
 header-img: "/gallery/albums/alb01.jpg"
 album-title: "my 1st album"
 images:
- - image_path: /gallery/albums/bg001.jpg
+ - image_path: /gallery/archive/g01/bg001.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg002.jpg
+ - image_path: /gallery/archive/g01/bg002.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg003.jpg
+ - image_path: /gallery/archive/g01/bg003.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg004.jpg
+ - image_path: /gallery/archive/g01/bg004.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg005.jpg
+ - image_path: /gallery/archive/g01/bg005.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg006.jpg
+ - image_path: /gallery/archive/g01/bg006.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg007.jpg
+ - image_path: /gallery/archive/g01/bg007.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg008.jpg
+ - image_path: /gallery/archive/g01/bg008.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg009.jpg
+ - image_path: /gallery/archive/g01/bg009.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg010.jpg
+ - image_path: /gallery/archive/g01/bg010.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg011.jpg
+ - image_path: /gallery/archive/g01/bg011.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg012.jpg
+ - image_path: /gallery/archive/g01/bg012.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg013.jpg
+ - image_path: /gallery/archive/g01/bg013.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg014.jpg
+ - image_path: /gallery/archive/g01/bg014.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg015.jpg
+ - image_path: /gallery/archive/g01/bg015.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg016.jpg
+ - image_path: /gallery/archive/g01/bg016.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg017.jpg
+ - image_path: /gallery/archive/g01/bg017.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg018.jpg
+ - image_path: /gallery/archive/g01/bg018.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg019.jpg
+ - image_path: /gallery/archive/g01/bg019.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg020.jpg
+ - image_path: /gallery/archive/g01/bg020.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg021.jpg
+ - image_path: /gallery/archive/g01/bg021.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg022.jpg
+ - image_path: /gallery/archive/g01/bg022.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg023.jpg
+ - image_path: /gallery/archive/g01/bg023.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg024.jpg
+ - image_path: /gallery/archive/g01/bg024.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg025.jpg
+ - image_path: /gallery/archive/g01/bg025.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg026.jpg
+ - image_path: /gallery/archive/g01/bg026.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg027.jpg
+ - image_path: /gallery/archive/g01/bg027.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg028.jpg
+ - image_path: /gallery/archive/g01/bg028.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg029.jpg
+ - image_path: /gallery/archive/g01/bg029.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg030.jpg
+ - image_path: /gallery/archive/g01/bg030.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg031.jpg
+ - image_path: /gallery/archive/g01/bg031.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg032.jpg
+ - image_path: /gallery/archive/g01/bg032.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg033.jpg
+ - image_path: /gallery/archive/g01/bg033.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg034.jpg
+ - image_path: /gallery/archive/g01/bg034.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg035.jpg
+ - image_path: /gallery/archive/g01/bg035.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg036.jpg
+ - image_path: /gallery/archive/g01/bg036.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg037.jpg
+ - image_path: /gallery/archive/g01/bg037.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg038.jpg
+ - image_path: /gallery/archive/g01/bg038.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg039.jpg
+ - image_path: /gallery/archive/g01/bg039.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg040.jpg
+ - image_path: /gallery/archive/g01/bg040.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg041.jpg
+ - image_path: /gallery/archive/g01/bg041.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg042.jpg
+ - image_path: /gallery/archive/g01/bg042.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg043.jpg
+ - image_path: /gallery/archive/g01/bg043.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg044.jpg
+ - image_path: /gallery/archive/g01/bg044.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg045.jpg
+ - image_path: /gallery/archive/g01/bg045.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg046.jpg
+ - image_path: /gallery/archive/g01/bg046.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg047.jpg
+ - image_path: /gallery/archive/g01/bg047.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg048.jpg
+ - image_path: /gallery/archive/g01/bg048.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg049.jpg
+ - image_path: /gallery/archive/g01/bg049.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg050.jpg
+ - image_path: /gallery/archive/g01/bg050.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg051.jpg
+ - image_path: /gallery/archive/g01/bg051.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg052.jpg
+ - image_path: /gallery/archive/g01/bg052.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg053.jpg
+ - image_path: /gallery/archive/g01/bg053.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg054.jpg
+ - image_path: /gallery/archive/g01/bg054.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg055.jpg
+ - image_path: /gallery/archive/g01/bg055.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg056.jpg
+ - image_path: /gallery/archive/g01/bg056.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg057.jpg
+ - image_path: /gallery/archive/g01/bg057.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg058.jpg
+ - image_path: /gallery/archive/g01/bg058.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg059.jpg
+ - image_path: /gallery/archive/g01/bg059.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg060.jpg
+ - image_path: /gallery/archive/g01/bg060.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg061.jpg
+ - image_path: /gallery/archive/g01/bg061.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg062.jpg
+ - image_path: /gallery/archive/g01/bg062.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg063.jpg
+ - image_path: /gallery/archive/g01/bg063.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg064.jpg
+ - image_path: /gallery/archive/g01/bg064.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg065.jpg
+ - image_path: /gallery/archive/g01/bg065.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg066.jpg
+ - image_path: /gallery/archive/g01/bg066.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg067.jpg
+ - image_path: /gallery/archive/g01/bg067.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg068.jpg
+ - image_path: /gallery/archive/g01/bg068.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg069.jpg
+ - image_path: /gallery/archive/g01/bg069.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg070.jpg
+ - image_path: /gallery/archive/g01/bg070.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
- - image_path: /gallery/albums/bg071.jpg
+ - image_path: /gallery/archive/g01/bg071.jpg
    caption: IMAGE TITLE
    copyright: © Konrad Jaworski
 ---
