--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -3,221 +3,221 @@ layout: page
 title: "Gallery"
 description: "Konrad Jaworski"
 active: gallery
-header-img: "/gallery/albums/alb01.jpg"
+header-img: "gallery/albums/alb01.jpg"
 album-title: "my 1st album"
 images:
  - image_path: /gallery/archive/g01/bg001.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg002.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg003.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg004.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg005.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg006.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg007.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg008.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg009.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg010.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg011.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg012.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg013.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg014.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg015.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg016.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg017.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg018.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg019.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg020.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg021.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg022.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg023.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg024.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg025.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg026.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg027.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg028.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg029.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg030.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg031.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg032.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg033.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg034.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg035.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg036.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg037.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg038.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg039.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg040.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg041.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg042.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg043.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg044.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg045.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg046.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg047.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg048.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg049.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg050.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg051.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg052.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg053.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg054.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg055.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg056.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg057.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg058.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg059.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg060.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg061.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg062.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg063.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg064.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg065.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg066.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg067.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg068.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg069.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg070.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g01/bg071.jpg
-   caption: IMAGE TITLE
+   caption: 
    copyright: © Konrad Jaworski
 ---
 
