--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,20 @@ layout: page
 title: "About"
 description: "Statement"
 active: about
-header-img: "img/about-bg.jpg"
+header-img: "gallery/archive/g01/bg059.jpg"
 ---
+<h1>CONTACT</h1>
+<br>
+<a href="mailto:konjaworski@gmail.com">konjaworski@gmail.com</a>
+<br>
+<br>
+<br>
+
 
 <h1>CREDITS</h1>
 <br>
+<br>
+<h4>Project is forked from <a href="https://github.com/sunbliss/photorama">photorama</a>.</h4>
 <br>
 <h4>The posts were written and exported as markdown ready for publication with <a href="http://dillinger.io/">Dillinger</a>, a useful online editor.</h4>
 <br>
@@ -19,4 +28,3 @@ header-img: "img/about-bg.jpg"
 
 
 <br>
-<h6><p>Image Source: <a href="https://unsplash.com/photos/Dwheufds6kQ/">Unsplash</a></p></h6>
