--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,9 +6,9 @@ active: gallery
 header-img: "img/gallery-bg.jpg"
 images:
  - image_path: /gallery/albums/alb01.jpg
-   gallery-folder: /gallery/gallery01/
+   gallery-folder: /gallery/gallery01/archive/g01/bg059.jpg
    gallery-name: gallery1
-   gallery-date: July 2015
+   gallery-date: 
 ---
 
 <html class="no-js" lang="en">
