--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -4,7 +4,7 @@ title: "Gallery"
 description: "Konrad Jaworski"
 active: gallery
 header-img: "gallery/albums/alb01.jpg"
-album-title: "my 1st album"
+album-title: ""
 images:
  - image_path: /gallery/archive/g01/bg001.jpg
    caption: 
