--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@ images:
 
 <div id="footer" role="contentinfo">
 		<ul class="soc-icons">	
+      {% if site.instagram_username %}
+			<li>
+   <a href="https://instagram.com/{{ site.instagram_username }}" style="
+color:#dddddd; target="_blank" title="Instagram">
+                       <i class="fa fa-instagram"></i>
+                     </span>
+</a></li>
+    {% endif %}
                     {% if site.github_username %}
                 <li>
    <a href="https://github.com/{{ site.github_username }}" style="
