--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "About"
 description: "Statement"
 active: about
-header-img: "gallery/archive/g01/bg059.jpg"
+header-img: "gallery/archive/g01/bg001.jpg"
 ---
 <h1>CONTACT</h1>
 <br>
@@ -16,15 +16,10 @@ header-img: "gallery/archive/g01/bg059.jpg"
 <h1>CREDITS</h1>
 <br>
 <br>
-<h4>Project is forked from <a href="https://github.com/sunbliss/photorama">photorama</a>.</h4>
+<h4>Websitre is forked from <a href="https://github.com/sunbliss/photorama">photorama</a>.</h4>
 <br>
 <h4>The posts were written and exported as markdown ready for publication with <a href="http://dillinger.io/">Dillinger</a>, a useful online editor.</h4>
 <br>
-<h4>All the commits were performed with the help of <a href="https://www.sourcetreeapp.com/">Source Tree</a> app.</h4>
-<br> 
 <h4>The photos are organised in galleries with <a href="https://github.com/metafizzy/isotope">ISOTOPE</a>.</h4>
-<br>
-<h4>The search overlay function code lies in <a href="https://github.com/chinchang/super-search">SUPER SEARCH</a>.</h4>
-
 
 <br>
