Update about. Update nav color.

--- a/about/index.html
+++ b/about/index.html
@@ -16,9 +16,7 @@ header-img: "gallery/archive/g01/bg001.jpg"
 <h1>CREDITS</h1>
 <br>
 <br>
-<h4>Websitre is forked from <a href="https://github.com/sunbliss/photorama">photorama</a>.</h4>
-<br>
-<h4>The posts were written and exported as markdown ready for publication with <a href="http://dillinger.io/">Dillinger</a>, a useful online editor.</h4>
+<h4>Website is forked from <a href="https://github.com/sunbliss/photorama">photorama</a>.</h4>
 <br>
 <h4>The photos are organised in galleries with <a href="https://github.com/metafizzy/isotope">ISOTOPE</a>.</h4>
 
