--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -156,6 +156,9 @@ images:
  - image_path: /gallery/archive/g01/bg023.jpg
    caption: 
    copyright: © Konrad Jaworski
+ - image_path: /gallery/archive/g01/bg074.jpg
+   caption: 
+   copyright: © Konrad Jaworski
 ---
 
 <html class="no-js" lang="en">
