Change Architecure photography bg image.

--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "Architecure photography"
 description: "Konrad Jaworski"
 active: gallery
-header-img: "gallery/archive/g01/bg001.jpg"
+header-img: "gallery/archive/g02/002_Więckowskiego_48_kamienicaNarozna_013.jpg"
 album-title: ""
 images:
  - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_001.jpg
