--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Architecure photography"
+title: "Architecture photography"
 description: "Konrad Jaworski"
 active: gallery
 header-img: "gallery/archive/g02/002_Więckowskiego_48_kamienicaNarozna_013.jpg"
@@ -10,12 +10,6 @@ images:
    caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_002.jpg
-   caption: 
-   copyright: © Konrad Jaworski
- - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_003.jpg
-   caption: 
-   copyright: © Konrad Jaworski
- - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_004.jpg
    caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_005.jpg
@@ -30,16 +24,10 @@ images:
  - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_008.jpg
    caption: 
    copyright: © Konrad Jaworski
- - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_009.jpg
-   caption: 
-   copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_010.jpg
    caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_011.jpg
-   caption: 
-   copyright: © Konrad Jaworski
- - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_012.jpg
    caption: 
    copyright: © Konrad Jaworski
  - image_path: /gallery/archive/g02/000_Pałac_Karola_Poznańskiego_013.jpg
